# JakePlusPlus

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  code.jake  output.txt
src/: common.cpp  compiler.cpp  interpreter.cpp  jakelang.cpp  main.cpp  nativeFuncs.cpp  scanner.cpp  value.cpp
src/include/: benchmark.h  bytecode.h  color.h  common.h  compiler.h  debug.h  interpreter.h  jakelang.h  nativeFuncs.h  print.h  scanner.h  value.h
